force-app/main/default/objects/Competitor_Plan_Information__c.object
<CustomObject>
    <description>Competitor Plan Information</description>
    <fields>
        <fullName>Carrier_Name__c</fullName>
        <label>Carrier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Competitor_Plan_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DME__c</fullName>
        <label>DME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>Deductible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Option__c</fullName>
        <label>Drug Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Room_Copay__c</fullName>
        <label>Emergency Room Copay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Incentives__c</fullName>
        <label>Family Incentives</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Medical_Management__c</fullName>
        <label>Family Medical Management</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Medical__c</fullName>
        <label>Family Medical</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Prescription_Drug__c</fullName>
        <label>Family Prescription Drug</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Total__c</fullName>
        <formula>Family_Medical__c  +  Family_Prescription_Drug__c +  Family_Incentives__c +  Family_Medical_Management__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HDHP_Option__c</fullName>
        <label>HDHP Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inpatient_Copay__c</fullName>
        <label>Inpatient Copay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Dependent_Age__c</fullName>
        <label>Max Dependent Age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Equipment_Rider__c</fullName>
        <label>Medical Equipment Rider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipName>Competitor_Plan_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Effective_Date__c</fullName>
        <label>Rate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_Termination_Date__c</fullName>
        <label>Rate Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscriber_Children_Incentives__c</fullName>
        <label>Subscriber Children Incentives</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_Children_Medical_Management__c</fullName>
        <label>Subscriber Children Medical Management</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_Children_Medical__c</fullName>
        <label>Subscriber Children Medical</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_Children_Prescription_Drug__c</fullName>
        <label>Subscriber Children Prescription Drug</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_Children_Total__c</fullName>
        <formula>Subscriber_Children_Medical__c +  Subscriber_Children_Prescription_Drug__c +  Subscriber_Children_Incentives__c +  Subscriber_Children_Medical_Management__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Children Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_Only_Incentives__c</fullName>
        <label>Subscriber Only Incentives</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_Only_Medical_Management__c</fullName>
        <label>Subscriber Only Medical Management</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_Only_Medical__c</fullName>
        <label>Subscriber Only Medical</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_Only_Prescription_Drug__c</fullName>
        <label>Subscriber Only Prescription Drug</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_Only_Total__c</fullName>
        <formula>Subscriber_Only_Medical__c +  Subscriber_Only_Prescription_Drug__c +  Subscriber_Only_Incentives__c +  Subscriber_Only_Medical_Management__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Only Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_Spouse_Incentives__c</fullName>
        <label>Subscriber Spouse Incentives</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_Spouse_Medical_Management__c</fullName>
        <label>Subscriber Spouse Medical Management</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_Spouse_Medical__c</fullName>
        <label>Subscriber Spouse Medical</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_Spouse_Prescription_Drug__c</fullName>
        <label>Subscriber Spouse Prescription Drug</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_Spouse_Total__c</fullName>
        <formula>Subscriber_Spouse_Medical__c +  Subscriber_Spouse_Prescription_Drug__c +  Subscriber_Spouse_Incentives__c +  Subscriber_Spouse_Medical_Management__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Spouse Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Tier</fullName>
                </value>
                <value>
                    <fullName>2 Tier</fullName>
                </value>
                <value>
                    <fullName>3 Tier</fullName>
                </value>
                <value>
                    <fullName>4 Tier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Current Plan Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Carrier_Name__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Plan_Name__c</columns>
        <columns>HDHP_Option__c</columns>
        <columns>Deductible__c</columns>
        <columns>Inpatient_Copay__c</columns>
        <columns>DME__c</columns>
        <columns>Emergency_Room_Copay__c</columns>
        <columns>Max_Dependent_Age__c</columns>
        <columns>Medical_Equipment_Rider__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Package Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Current Plan Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>